[package]
name = "holidays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.*", features = [ "blocking", "json" ] }
serde = { version = "1.0.*", features = [ "derive" ] }
chrono = { version = "0.4.*", features = [ "serde" ] }
serde_json = "1.0.*"
structopt = "0.3.*"
directories = "4.0.*"
anyhow = "1.0.*"

